# openapi.yaml
@@ -1,13 +1,20 @@
+#
+# Questo e' un progetto d'esempio in formato OpenAPI 3.0 API Starter Kit.
+#
+# Stai per sviluppare un API? Segui attentamente questo template e
+#   potrai integrarla facilmente in Developers Italia.
+#
 x-commons:
-  common_parameters:
-    - in: query
-      name: fields
-      schema:
-        type: string
-    - in: query
-      name: limit
-      schema:
-        type: number
+  common-responses: &common-responses
+    '400':
+      $ref: '#/components/responses/400BadRequest'
+    '429':
+      $ref: '#/components/responses/429TooManyRequests'
+    '503':
+      $ref: '#/components/responses/503ServiceUnavailable'
+    default:
+      $ref: '#/components/responses/default'
+
 openapi: 3.0.1
 info:
   title: iPA unofficial.
@@ -67,6 +74,19 @@ tags:
       url: 'http://docs.my-api.com/pet-operations.htm'
     name: public
 paths:
+  /status:
+    get:
+      operationId: api.status
+      responses:
+        <<: *common-responses
+        200:
+          description: |
+            L'API funziona correttamente.
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+
   /amministrazioni:
     get:
       operationId: api.get_amministrazioni
@@ -88,12 +108,6 @@ paths:
           schema:
             type: string
         - in: query
-          name: fields_a
-          schema:
-            type: array
-            items:
-              type: string
-        - in: query
           name: fields
           schema:
             type: string
@@ -102,13 +116,14 @@ paths:
           schema:
             type: number
       responses:
+        <<: *common-responses
         '200':
           description: foo
           content:
             application/json:
               schema:
                 properties:
-                  entries:
+                  items:
                     type: array
                     items:
                       $ref: '#/components/schemas/Amministrazione'
@@ -130,12 +145,162 @@ paths:
           schema:
             type: number
       responses:
+        <<: *common-responses
         '200':
           description: bar
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Amministrazione'
+  /amministrazione/{codice_ipa}/uffici:
+    get:
+      operationId: api.get_uffici_by_ipa
+      parameters:
+        - in: path
+          name: codice_ipa
+          schema:
+            type: string
+        - in: query
+          name: codice_univoco_ufficio
+          schema:
+            type: string
+        - in: query
+          name: codice_fiscale
+          schema:
+            type: string
+        - in: query
+          name: descrizione
+          schema:
+            type: string
+        - in: query
+          name: mail
+          schema:
+            type: string
+        - in: query
+          name: fields
+          schema:
+            type: string
+        - in: query
+          name: limit
+          schema:
+            type: number
+      responses:
+        <<: *common-responses
+        '200':
+          description: foo
+          content:
+            application/json:
+              schema:
+                properties:
+                  items:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Ufficio'
+  /amministrazione/{codice_ipa}/ufficio/{codice_univoco_ufficio}:
+    get:
+      operationId: api.get_ufficio_by_ipa
+      parameters:
+        - in: path
+          name: codice_ipa
+          schema:
+            type: string
+        - in: path
+          name: codice_univoco_ufficio
+          schema:
+            type: string
+        - in: query
+          name: codice_fiscale
+          schema:
+            type: string
+        - in: query
+          name: descrizione
+          schema:
+            type: string
+        - in: query
+          name: mail
+          schema:
+            type: string
+        - in: query
+          name: fields
+          schema:
+            type: string
+        - in: query
+          name: limit
+          schema:
+            type: number
+      responses:
+        <<: *common-responses
+        '200':
+          description: foo
+          content:
+            application/json:
+              schema:
+                properties:
+                  items:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Ufficio'
+
+  /uffici:
+    get:
+      operationId: api.get_uffici
+      parameters:
+        - in: query
+          name: codice_ipa
+          schema:
+            type: string
+        - in: query
+          name: codice_univoco_ufficio
+          schema:
+            type: string
+        - in: query
+          name: codice_fiscale
+          schema:
+            type: string
+        - in: query
+          name: descrizione
+          schema:
+            type: string
+        - in: query
+          name: mail
+          schema:
+            type: string
+        - in: query
+          name: fields
+          schema:
+            type: string
+        - in: query
+          name: limit
+          schema:
+            type: number
+      responses:
+        <<: *common-responses
+        '200':
+          description: foo
+          content:
+            application/json:
+              schema:
+                properties:
+                  items:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Ufficio'
+  /ufficio/{codice_univoco_ufficio}:
+    get:
+      operationId: api.get_ufficio
+      parameters:
+      - in: path
+        name: codice_univoco_ufficio
+        schema:
+          type: string
+      responses:
+        <<: *common-responses
+        '200':
+          description: foo
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Ufficio'
 components:
   schemas:
     Problem:
@@ -171,6 +336,20 @@ components:
         sito_istituzionale:
           type: string
           format: url
+        contatti:
+          properties:
+            mail:
+              type: string
+              format: email
+            tipo:
+              type: string
+              enum:
+              - pec
+              - altro
+        data_accreditamento:
+          description: TODO
+          type: string
+          format: date
     Responsabile:
       properties:
         nome_proprio:
@@ -194,6 +373,10 @@ components:
           type: string
         regione:
           type: string
+    Ufficio:
+      properties:
+        codice_ipa: {type: string}
+        codice_univoco_ufficio: {type: string}
     Servizio:
       properties:
         nome:
@@ -208,3 +391,16 @@ components:
           type: string
         url:
           type: string
+
+  responses:
+    # Predefined error codes for this API
+    400BadRequest:
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/400BadRequest'
+    404NotFound:
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/404NotFound'
+    429TooManyRequests:
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/429TooManyRequests'
+    503ServiceUnavailable:
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/503ServiceUnavailable'
+    default:
+      $ref: 'https://teamdigitale.github.io/openapi/responses/v3.yaml#/default'
